--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -17,30 +17,22 @@ License URI: https://www.gnu.org/licenses/gpl.html
 BlankSlate WordPress Theme © 2011-2023 TidyThemes
 BlankSlate is distributed under the terms of the GNU GPL
 */
-footer{
-    font-family: Syne;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #000000;
-    height: 60px;
-    width: 1440px;
-    border-radius: 0px;
-    background-color: #FFFFFF;}
-header{
-    font: sine;
-    color: #000000;
-}
-/*  logo PLANTY */
-.logo
-{
-position: absolute;
-left: 0%;
-right: 4.67%;
-top: 0.1%;
-bottom: 0.61%;
-background: #DC9F96;}
+/*GENERAL*/
+:root {
+    --main-color: white; /* var(--main-color) */
+    --second-color: #DC9F96; /* var(--second-color) */
+   
+  }
+
+.container { 
+    display: flex;
+    justify-content: center;
+    text-decoration: black;
+
+
+ }
+
+
+
 
 
