--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -30,16 +30,12 @@ BlankSlate is distributed under the terms of the GNU GPL
 
 footer{
   text-align:center;
-  color: black;
   
-  
-
 }
+
 header{
   display: flex;
   justify-content: space-between;
-   
-   margin:0;
   
 }
 
@@ -73,8 +69,10 @@ max-width: 1440px;
 
 .rectangle img{
   width:1440px;
+  z-index: 0;
   
 }
+
 .h2{
   color: #3B8E46;
   font-size: 38px;
@@ -82,18 +80,23 @@ max-width: 1440px;
   line-height: 46px;
   text-align: center;
 }
-
-.textes{
+.titre1{
+  color: #3B8E46;
+  font-weight: 700;
+  font-size: 30px;
+  z-index: -1;
+}
+.presentation{
   
 font-size: 20px;
 font-weight: 400;
 line-height: 24px;
 letter-spacing: 0em;
 text-align: center;
-
+z-index: -1;
 }
 
-.titre{
+.titre2{
 color: #D2776A;
 font-size: 30px;
 font-weight: 800;
@@ -102,4 +105,26 @@ letter-spacing: 0em;
 text-align: center;
 
 }
+.fraise{
+  display:flex ;
+justify-content: center;
+}
+.pamplemousse{
+  display: flex;
+justify-content:left;
+}
+.framboise{
+  display: flex;
+justify-content: center;}
+.citron{
+  display: flex;
+justify-content: left;}
+ 
+.boutton{
+  background: #E0B9B4 ;
+  border-radius: 5px;
+ }
 
+ .canettes img{
+  width: 1440px;
+ }
