--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -50,7 +50,8 @@ header{
 position: relative;
 width: 349.19px;
 height: 400.08px;
-left: -300px;
+left: -220px;
+top: 50px;
 z-index: 0;/*gestion du positionnement : feuille mis en arrière plan */
 }
 
@@ -58,7 +59,8 @@ z-index: 0;/*gestion du positionnement : feuille mis en arrière plan */
   position: relative;
   width: 349.19px;
   height: 400.08px;
-  left: 350px;
+  left: 190px;
+  top: 60px;
   z-index: 0;
  } 
   
@@ -84,7 +86,9 @@ max-width: 1440px;
   color: #3B8E46;
   font-weight: 700;
   font-size: 30px;
-  z-index: -1;
+  position: relative;
+  top: -260px; 
+
 }
 .presentation{
   
@@ -93,38 +97,204 @@ font-weight: 400;
 line-height: 24px;
 letter-spacing: 0em;
 text-align: center;
-z-index: -1;
-}
 
-.titre2{
+}
+.positionenergie {
+  position: relative;
+  top: -260px; 
+}
+.titre2 {
 color: #D2776A;
 font-size: 30px;
 font-weight: 800;
 line-height: 36px;
 letter-spacing: 0em;
 text-align: center;
-
+position: relative;
+top: -210px;
 }
+
+.positionlesgouts{
+  position: relative;
+ top: -230px;
+}
+  
 .fraise{
   display:flex ;
 justify-content: center;
+
+}
+.strawberry{
+  position: relative;
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: center;
+  top:-260px;
+  
 }
 .pamplemousse{
   display: flex;
 justify-content:left;
 }
+.grapefruit{
+  position: relative;
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 58px;
+  letter-spacing: 0em;
+  top: -260px;
+  
+}
 .framboise{
   display: flex;
 justify-content: center;}
+.raspberry{
+  position: relative;
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: center;
+  top:-280px;
+  
+}
 .citron{
   display: flex;
 justify-content: left;}
+.lemon{
+  position: relative;
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 58px;
+  letter-spacing: 0em;
+  top: -280px;
+  right: 50px;
+}
  
 .boutton{
   background: #E0B9B4 ;
   border-radius: 5px;
  }
 
+ .h3{
+  color: #3B8E46;
+  font-size: 30px;
+  font-weight: 800;
+  line-height: 36px;
+  text-align: center;
+  position: relative;
+  top:420px;
+}
+.rectangle2 {
+  
+  position: relative;
+  bottom: -850px;
+  
+}
+.fatiha , .vero , .marc{
+  position: relative;
+  top: 450px;
+}
+.prenoms{
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0em;
+  color:#3B8E46;
+}
+.avis{
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+letter-spacing: 0em;
+text-align: left;
+
+}
  .canettes img{
+  position: relative;
+  top: 5px;
   width: 1440px;
  }
+
+ /*page commander*/
+
+.equipe{
+  position: relative;
+  top:-350px;
+font-size: 30px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0em;
+text-align: center;
+
+}
+.imgequipe{
+  position: relative;
+  top: -350px;
+}
+.nameequipe{
+  position: relative;
+  top: -390px;
+  left: 70px;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0em;
+
+
+}
+
+.metier{
+  position: relative;
+  top:-400px;
+  left: 50px;
+ font-size: 20px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+
+}
+
+.feuilleseule{
+  position: relative;
+  top:-518px;
+}
+
+.contact{
+  
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: center;
+  
+
+}
+
+.formulaire{
+font-size: 20px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+
+}
+
+.imgformulaire{
+ position: relative;
+z-index:1 ;
+}
+
+.feuillage{
+  position: relative;
+  top:-130px;
+  left: 250px;
+  z-index: 0 ;
+}
