--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -45,6 +45,14 @@ header{
   justify-content: space-between;
   
 }
+.menu{
+display: flex;
+justify-content: flex-end;}
+
+.menu-item{
+color: black;
+text-decoration: none;
+width: 120px;}
 
 .energy_drink{
   position: relative;
@@ -57,8 +65,8 @@ header{
 position: relative;
 width: 349.19px;
 height: 400.08px;
-left: -220px;
-top: 50px;
+left: -250px;
+top: 120px;
 z-index: 0;/*gestion du positionnement : feuille mis en arrière plan */
 }
 
@@ -66,8 +74,8 @@ z-index: 0;/*gestion du positionnement : feuille mis en arrière plan */
   position: relative;
   width: 349.19px;
   height: 400.08px;
-  left: 190px;
-  top: 60px;
+  left: 315px;
+  top: 120px;
   z-index: 0;
  } 
   
@@ -102,7 +110,6 @@ max-width: 1440px;
 font-size: 20px;
 font-weight: 400;
 line-height: 24px;
-letter-spacing: 0em;
 text-align: center;
 
 }
@@ -128,7 +135,7 @@ top: -210px;
   
 .fraise{
 margin-top: -200px;
-padding-left: 80px;
+padding-left:250px;
 display:flex ;
 justify-content: center;
 }
@@ -142,7 +149,7 @@ justify-content: center;
   letter-spacing: 0em;
   text-align: center;
   top:-220px ;
-  left: 50px;
+  left: 120px;
 }
 .pamplemousse{
 margin-top: -200px;
@@ -158,11 +165,11 @@ justify-content:left;
   line-height: 58px;
   letter-spacing: 0em;
   top: -260px;
-  right:50px ;
+  right:120px ;
   
 }
 .framboise{
-padding-left: 80px;
+padding-left: 250px;
 margin-top: -250px;
 display: flex;
 justify-content: center;}
@@ -173,10 +180,9 @@ justify-content: center;}
   font-size: 48px;
   font-weight: 800;
   line-height: 58px;
-  letter-spacing: 0em;
   text-align: center;
   top:-250px;
-  left: 50px;
+  left: 120px;
   
 }
 .citron{
@@ -193,7 +199,7 @@ justify-content: left;}
   line-height: 58px;
   letter-spacing: 0em;
   top: -210px;
-  right:50px ;
+  right:120px ;
   
 }
  
@@ -208,17 +214,18 @@ justify-content: left;}
   line-height: 36px;
   text-align: center;
   position: relative;
-  top:420px;
+ top:450px;
 }
-.rectangle2 {
-position: relative;
-top: 50px;
-left:20px;
+
+.rectangle2 img{
+width:1440px;
+margin-bottom:-950px;
   
 }
-.fatiha , .vero , .marc{
-  position: relative;
-  top: 450px;
+.fatiha , .vero , .marc
+{position: relative;
+ top:500px;
+
 }
 .prenoms{
   font-size: 30px;
@@ -226,6 +233,9 @@ left:20px;
   line-height: 36px;
   letter-spacing: 0em;
   color:#3B8E46;
+  position: relative;
+  top:500px;
+  
 }
 .avis{
 font-size: 16px;
@@ -233,23 +243,31 @@ font-weight: 400;
 line-height: 19px;
 letter-spacing: 0em;
 text-align: left;
-
-}
-.canettes img{
 position: relative;
+top:500px;}
+
+.canettes img{
 width: 1440px;
 }
 
  /*page nous rencontrer*/
-.entrytitle{
-font-size: 38px;
-font-weight: 800;
-line-height: 46px;
-letter-spacing: 0em;
-text-align: center;
+.entry-title{
+display: none;
+}
+
+.title{
+  font-size: 40px;
+  font-weight: 800;
+  line-height: 46px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #D2776A;
+ 
 }
 .fleur{
-  left:100px;
+  position: relative;
+  left:200px;
+  top:110px;
 }
 .equipe{
 position: relative;
@@ -261,28 +279,39 @@ letter-spacing: 0em;
 text-align: center;
 }
 .megane {
-height: 294px;
-width: 441px;
-top: -200px;
+top: -380px;
 position: relative;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+
 }
 .brooke{
-height: 294px;
-width: 441px;
 top:-380px;
 position: relative;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+
 }
 
 .sylvie{
-  height: 278px;
-  width: 185px;
-  top: -380px;
-  position: relative;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: center;
+top: -380px;
+position: relative;
 }
 .feuilleseule{
   height: 278px;
   width: 185px;
-  top: 73px;
+  top: -305px;
   position: relative;
 
 }
@@ -316,13 +345,139 @@ z-index: 1;
  }
 
  /*commander*/
- .votrecommande{
+ #contain{
+  background-color: #3B8E46;
+ }
+ .titlecommander{
+font-size: 38px;
+font-weight: 800;
+line-height: 46px;
+text-align: center;
+color: #ffffff;
+
+ }
+
+ .minifruit
+ {position: relative;
+  top:-150px;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: hsl(0, 0%, 100%);
+ }
+ .ligne{
+  position: relative;
+  top: 30px;
+  margin-left:-15px ;
+ }
+ .ligne1{
+  position: relative;
+  top: -300px;
+ }
+ .ligne2{
+  position: relative;
+  top:-360px;
+ }
+ .votrecommande
+ {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   letter-spacing: 0em;
-  margin-left: 240px;
-  color:#ffffff;
+  margin-left: 225px;
+  top:20px;
+  padding-bottom: 20px;
+  position: relative;
+  color:#ffffff;}
 
- }
+  .vosinformations{
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+ left: 20px;
+color: #FFFFFF;
+position: relative;
+top: -270px;
+  }
 
+  .livraison{
+    font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0em;
+  right: 200px;
+  color: #FFFFFF;
+  position: relative;
+top: -270px;
+  }
+.carreblanc{
+position: relative;
+top:-150px ;
+width: 72px;
+right:6px;
+
+}
+.carrerose
+{position: relative;
+top:-150px;
+width:54px;
+right: 36px;
+}
+
+
+.ok
+{
+  position:relative;
+  top:-140px;
+  width: 90px;
+  right: 50px;
+}
+
+.zero{
+  position: relative;
+  top:-260px;
+  left: 25px;
+
+}
+
+.plus{ 
+  position: relative;
+  top:-275px;
+  right: 54px;
+  color: #FFFFFF;
+
+}
+
+.moins {
+   position: relative;
+  top:-315px;
+  right: 53px;
+  color: #FFFFFF;
+
+}
+
+  .separation{ 
+  position: relative;
+  top:-303px;
+  right:65px;}
+
+  .formulaire2{
+    position: relative;
+    top: -270px;
+    left:230px;
+   
+
+  }
+  .formulaire3{
+    position: relative;
+    top: -270px;
+    right: 160px;
+    
+  }
+
+  .shopping{
+    position: relative;
+    top: -300px;
+  }
